<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/background"
    android:keepScreenOn="true"
    android:background="@drawable/root_bg" 
    android:orientation="vertical" 
    android:paddingLeft="5dip"
    android:paddingRight="5dip">
    <ImageButton android:id="@+id/return_back" 
        android:contentDescription="@string/return_back"
        android:background="@android:color/transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dip"
        android:src="@drawable/return_back_icon"/>   
    <TextView android:id="@+id/song_name" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:singleLine="true"       		    
		android:ellipsize="marquee"  
		android:focusable="true"  
		android:marqueeRepeatLimit="marquee_forever"  
		android:focusableInTouchMode="true"  
		android:scrollHorizontally="true"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="8dip"
        android:textSize="28sp"
        android:layout_toRightOf="@id/return_back"/>
    <TextView android:id="@+id/singer_name" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
    	android:singleLine="true"  
		android:ellipsize="marquee"  
		android:focusable="true"  
		android:marqueeRepeatLimit="marquee_forever"  
		android:focusableInTouchMode="true"  
		android:scrollHorizontally="true"      
        android:layout_alignLeft="@id/song_name"
        android:textSize="20sp"
        android:layout_below="@id/song_name"/>
    <RelativeLayout 
        android:id="@+id/play_control"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"  
        android:gravity="center"
        android:layout_marginBottom="10dip"
        android:layout_alignParentBottom="true">       
        <ImageButton android:id="@+id/play_mode" 
	        android:contentDescription="@string/play_mode"
   		    android:layout_width="wrap_content"
   		    android:layout_height="wrap_content" 
   		    android:layout_marginRight="5dip"
	        android:background="@android:color/transparent"
	        android:src="@drawable/sequence_mode"
	        android:layout_centerVertical="true"/>  
        <ImageButton android:id="@+id/prev"        
   		    android:layout_width="wrap_content"
   		    android:layout_height="wrap_content" 
   		    android:layout_marginRight="5dip"
	        android:contentDescription="@string/before_button"
	        android:background="@android:color/transparent"	        
	        android:src="@drawable/prev"
	        android:layout_toRightOf="@id/play_mode"
	        android:layout_centerVertical="true" />  
        <ImageButton  android:id="@+id/play"
   		    android:layout_width="wrap_content"
   		    android:layout_height="wrap_content" 
   		    android:layout_marginRight="5dip"
	        android:contentDescription="@string/begin_button"
	        android:background="@android:color/transparent"                
	        android:src="@drawable/play"
	        android:layout_toRightOf="@id/prev"
	        android:layout_centerVertical="true" />    
   		<ImageButton android:id="@+id/next" 
   		    android:layout_width="wrap_content"
   		    android:layout_height="wrap_content" 
	        android:contentDescription="@string/after_button"	       
	        android:background="@android:color/transparent"	        
	        android:src="@drawable/next"
	        android:layout_toRightOf="@id/play"
	        android:layout_centerVertical="true" /> 		
    </RelativeLayout>      
    
    <ImageButton android:id="@+id/more" 
   		    android:layout_width="wrap_content"
   		    android:layout_height="wrap_content" 
	        android:contentDescription="@string/more_button"	       
	        android:background="@android:color/transparent"	        
	        android:src="@drawable/more"
	        android:layout_alignRight="@id/play_control"
	        android:layout_alignTop="@id/play_control"/> 
    
    <SeekBar android:id="@+id/seekbar"  
        android:layout_width="fill_parent"  
        android:layout_height="wrap_content"
		android:max="100"
        android:layout_alignLeft="@id/song_name"
        android:layout_marginRight="40dp"
        android:minHeight="4dp"
    	android:maxHeight="4dp"
        android:progressDrawable="@layout/play_seekbar_style"  
        style="?android:attr/progressBarStyleHorizontal"
        android:thumb="@layout/play_seekbar_thumb" 
        android:layout_marginBottom="32dip"
        android:layout_above="@id/play_control"/>
    
    <TextView android:id="@+id/increase_time"
        android:layout_width="wrap_content"  
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_alignLeft="@id/seekbar"
        android:text="@string/increase_time"
        android:textSize="13sp"
        android:textColor="@color/white"
        android:layout_above="@id/play_control"/>
    
    <TextView android:id="@+id/mp3_time"
        android:layout_width="wrap_content"  
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
		android:layout_alignRight="@id/seekbar"		
        android:text="@string/mp3_time"
        android:textSize="13sp"
        android:textColor="@color/white"
        android:layout_above="@id/play_control"/>
   
   <com.hhsj.music.lyric.LyricTextView android:id="@+id/lyric" 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="10dip"
        android:layout_marginBottom="10dip"
        android:layout_alignLeft="@id/song_name"
        android:layout_below="@id/singer_name"      
        android:layout_above="@id/seekbar"/>  
</RelativeLayout>